# agentic-site-factory

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: Home.py
data/sample_manuscripts/: elena_vale.txt
data/sample_specs/: elena_vale_author_site.json
docs/: ARCHITECTURE.md  DEMO_GUIDE.md  DEPLOYMENT.md  PORTFOLIO_OVERVIEW.md  ROADMAP.md
scripts/: generate_demo_site.py  generate_from_spec.py
src/agentic_site_factory/: __init__.py  agents.py  artifacts.py  book_catalog.py  book_summarizer.py  bundle.py  ingestion.py  models.py  pipeline.py  preview_links.py  quality.py  retrieval.py  settings.py  site_builder.py  spec_generation.py  static_publish.py  text_sanitizer.py  theming.py
src/agentic_site_factory.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_artifacts.py  test_book_catalog.py  test_book_summarizer.py  test_bundle.py  test_generate_from_spec.py  test_ingestion.py  test_multipage_site.py  test_pipeline.py  test_preview_links.py  test_quality.py  test_retrieval.py  test_settings.py  test_site_builder.py  test_static_publish.py  test_streamlit_config.py  test_streamlit_viewer.py  test_text_sanitizer.py  test_themes.py  test_theming.py  test_visual_customization.py
