[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-site-factory"
version = "0.1.0"
description = "Agentic RAG website builder that turns manuscripts and specifications into static website artifacts."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.34.0",
    "scikit-learn>=1.4.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
    "openai>=1.30.0",
    "pypdf>=4.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.4.4"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
